--- a/mfb/src/mfb.css
+++ b/mfb/src/mfb.css
@@ -147,9 +147,9 @@
     display: block;
     position: absolute;
     top: 0;
-    right: 1px;
-    padding: 10px 0;
-    margin: -10px 0; }
+    right: 9px;
+    padding: 18px 0;
+    margin: -18px 0; }
 
 /**
  * These are the basic styles for all the icons inside the main button
@@ -184,8 +184,8 @@
   z-index: 20; }
 
 .mfb-component__button--child {
-  height: 56px;
-  width: 56px; }
+  height: 40px;
+  width: 40px; }
 
 .mfb-component__main-icon--active,
 .mfb-component__main-icon--resting {
@@ -196,8 +196,8 @@
 
 .mfb-component__child-icon,
 .mfb-component__child-icon {
-  line-height: 56px;
-  font-size: 18px; }
+  line-height: 40px;
+  font-size: 18; }
 
 .mfb-component__main-icon--active {
   opacity: 0; }
@@ -606,7 +606,7 @@
 
 .mfb-component--br .mfb-component__list [data-mfb-label]:after, .mfb-component--tr .mfb-component__list [data-mfb-label]:after {
   content: attr(data-mfb-label);
-  right: 70px; }
+  right: 62px; }
 
 .mfb-component--tl [data-mfb-label]:after, .mfb-component--bl [data-mfb-label]:after {
   content: attr(data-mfb-label);
@@ -614,7 +614,7 @@
 
 .mfb-component--tl .mfb-component__list [data-mfb-label]:after, .mfb-component--bl .mfb-component__list [data-mfb-label]:after {
   content: attr(data-mfb-label);
-  left: 70px; }
+  left: 62px; }
 
 /*------------------------------------*\
     #DEVELOPMENT | In development
